--- a/TCPMon/Properties/Resources.resx
+++ b/TCPMon/Properties/Resources.resx
@@ -124,10 +124,13 @@
   <data name="hex" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hex.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="iks" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iks.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="disconnect" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\disconnect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="iks" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iks.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="blaze_file" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\blaze_file.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
