Add icons to script editor and save button

--- a/TCPMon/ScriptEditor.resx
+++ b/TCPMon/ScriptEditor.resx
@@ -138,37 +138,6 @@
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="toolStripDropDownButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="compileStrip.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
-</value>
-  </data>
   <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>122, 17</value>
   </metadata>
@@ -176,8 +145,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAk
-        EQAAAk1TRnQBSQFMAgEBBAEAAWABAAFgAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAi
+        EQAAAk1TRnQBSQFMAgEBBAEAAZgBAAGYAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
         AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8ALgABYwFJATUB/wFj
         AUkBNQH/AWMBSQE1Af8BYwFJATUB/wFjAUkBNQH/AWMBSQE1Af8BYwFJATUB/wFjAUkBNQH/AWMBSQE1
         Af8BYwFJATUB/wFjAUkBNQH/FAABYwFJATUB/wFjAUkBNQH/AWMBSQE1Af8BYwFJATUB/wFjAUkBNQH/
@@ -241,16 +210,16 @@
         Ad0B/wGPAegC/wFwAd4C/wFKAc4C/wEwAcMC/wEkAcQB/QH/ARgBvgH9Af8BDAG7Af0B/wEFAboB/gH/
         AQMBuwH+Af8BAwG+Af4B/wEIAagB2wH/AxcBHwsACf8DAAX/AwAF/wPAAf8DAAH/JAAI/wH+AfwB+gH/
         Af4B/AH6Av8C/g3/AaIBjAF8Af8B1QHFAbwB/wGqASEBGQH/FAAI/wF+AZcBxwH/Af4B/AH6Af8BAAEz
-        AZUN/wGiAYwBfAH/AdUBxQG8Af8BqgEhARkB/xAAAVwBbAFwAesBtwHwAv8BpwHtAv8BjAHmAv8BVAJW
-        AasDBQEGJAADgAH/A8AB/wMABf8DgAH/AwAB/wMABf8DAAH/JAAJ/wH9AfwB/wH9AfkB+AH/AfwB9QHy
-        Af8B+wHwAesB/wH5AesB5AH/AfcB5wHdAf8BpwGRAYIB/wG1AS0BJQH/GAAE/wEAATMBlQL/Af0B/AH/
-        Af0B+QH4Af8BAAEzAZUB/wH7AfAB6wH/AfkB6wHkAf8B9wHnAd0B/wGnAZEBggH/AbUBLQElAf9UAAOA
-        Af8HAAX/AwAB/wcAAf9tAAEzAZUB/4AAA4AB/ygAAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEB
-        BgABARYAA/+BAAHgAQMB4AEDA/8BjwHgAQMB4AEDAv8B/AGJAeABAwHgAQMBwAEBAfgBAAHgAQMB4AED
-        AcABAQH8AQEB4AEDAeABAwHAAQEB+AEAAeABAwHgAQMBwAEBAfgBAAHgAQMB4AEDAcABAQGQAQAB4AED
-        AeABAwHAAQEBAAEBAeABAwHgAQMBwAEBAYABAQHgAQMB4AEDAcABAQEAARsB4AEDAcABAwHAAQEBAAEf
-        AeABAwHAAQMBwAEBAQABHwHgAQMBwAEDAcABAQGAAT8B4AEDAeABAwHAAf8BgAE/AeABBwHgAQcC/wHR
-        AX8C/wH3A/8B+wH/Cw==
+        AZUN/wGiAYwBfAH/AdUBxQG8Af8BqgEhARkB/xAAAWECbAHrAbcB8AL/AacB7QL/AYwB5gL/AVQCVgGr
+        AwUBBiQAA4AB/wPAAf8DAAX/A4AB/wMAAf8DAAX/AwAB/yQACf8B/QH8Af8B/QH5AfgB/wH8AfUB8gH/
+        AfsB8AHrAf8B+QHrAeQB/wH3AecB3QH/AacBkQGCAf8BtQEtASUB/xgABP8BAAEzAZUC/wH9AfwB/wH9
+        AfkB+AH/AQABMwGVAf8B+wHwAesB/wH5AesB5AH/AfcB5wHdAf8BpwGRAYIB/wG1AS0BJQH/VAADgAH/
+        BwAF/wMAAf8HAAH/bQABMwGVAf+AAAOAAf8oAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYA
+        AQEWAAP/gQAB4AEDAeABAwP/AY8B4AEDAeABAwL/AfwBiQHgAQMB4AEDAcABAQH4AQAB4AEDAeABAwHA
+        AQEB/AEBAeABAwHgAQMBwAEBAfgBAAHgAQMB4AEDAcABAQH4AQAB4AEDAeABAwHAAQEBkAEAAeABAwHg
+        AQMBwAEBAQABAQHgAQMB4AEDAcABAQGAAQEB4AEDAeABAwHAAQEBAAEbAeABAwHAAQMBwAEBAQABHwHg
+        AQMBwAEDAcABAQEAAR8B4AEDAcABAwHAAQEBgAE/AeABAwHgAQMBwAH/AYABPwHgAQcB4AEHAv8B0QF/
+        Av8B9wP/AfsB/ws=
 </value>
   </data>
   <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
