--- a/TCPMon/SchemaTester.resx
+++ b/TCPMon/SchemaTester.resx
@@ -135,4 +135,40 @@
         CgAAAAAAAAAAjQABAAH4/////P///woAAAAAAAAAAKQAAQAB9/////z///8KAAAAAAAAAACWAAEACw==
 </value>
   </data>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADo
+        BQAAAk1TRnQBSQFMAgEBBgEAARABAAEQAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIP8A/wD/AC0AAx8B/wgAAx8B/yAAAx8B/wMfAf8DHwH/Ax8B/xAAAx8B/wMf
+        Af8DHwH/Ax8B/6AAAx8B/wgAAx8B/yAAAx8B/wMfAf8DHwH/Ax8B/xAAAx8B/wMfAf8DHwH/Ax8B/6AA
+        Ax8B/wgAAx8B/yAAAx8B/wMfAf8DHwH/Ax8B/xAAAx8B/wMfAf8DHwH/Ax8B/5gAAx8B/wMfAf8DHwH/
+        Ax8B/wMfAf8DHwH/Ax8B/wMfAf8YAAMfAf8DHwH/Ax8B/wMfAf8QAAMfAf8DHwH/Ax8B/wMfAf+gAAMf
+        Af8IAAMfAf/wAAMfAf8IAAMfAf/oAAMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/GAADHwH/
+        Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf+gAAMfAf8IAAMfAf8gAAMf
+        Af8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/6AAAx8B/wgAAx8B/yAA
+        Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/oAADHwH/CAADHwH/
+        /wD/AP8A/wD/AP8A/wBvAAMfAf8DHwH/Ax8B/wgAAx8B/wMfAf8DHwH/YAADHwH/Ax8B/wMfAf8IAAMf
+        Af8DHwH/Ax8B/wMfAf8DHwH/DAADHwH/Ax8B/wMfAf8DHwH/BAADHwH/Ax8B/wMfAf8DHwH/DAADHwH/
+        Ax8B/wMfAf8QAAMfAf8YAAMfAf8sAAMfAf8DHwH/Ax8B/wMfAf8gAAMfAf8MAAMfAf8MAAMfAf8QAAMf
+        Af8MAAMfAf8EAAMfAf8MAAMfAf8EAAMfAf8cAAMfAf8YAAMfAf8oAAMfAf8MAAMfAf8gAAMfAf8DHwH/
+        CAADHwH/DAADHwH/EAADHwH/DAADHwH/BAADHwH/DAADHwH/BAADHwH/HAADHwH/GAADHwH/KAADHwH/
+        DAADHwH/IAADHwH/BAADHwH/BAADHwH/DAADHwH/FAADHwH/Ax8B/wMfAf8DHwH/BAADHwH/DAADHwH/
+        BAADHwH/HAADHwH/GAADHwH/LAADHwH/Ax8B/wMfAf8DHwH/IAADHwH/CAADHwH/Ax8B/wwAAx8B/yAA
+        Ax8B/wQAAx8B/wwAAx8B/wQAAx8B/xwAAx8B/xgAAx8B/zgAAx8B/yAAAx8B/wwAAx8B/wQAAx8B/wQA
+        Ax8B/xQAAx8B/wMfAf8DHwH/CAADHwH/Ax8B/wMfAf8DHwH/DAADHwH/Ax8B/wMfAf8QAAMfAf8YAAMf
+        Af8cAAMfAf8MAAMfAf8DHwH/Ax8B/wwAAx8B/xgAAx8B/wMfAf8DHwH/DAADHwH/Ax8B/ygAAx8B/zQA
+        Ax8B/xgAAx8B/xwAAx8B/yQAAx8B/2AAAx8B/zQAAx8B/xgAAx8B/xwAAx8B/yQAAx8B/5gAAx8B/wMf
+        Af8DHwH/CAADHwH/Ax8B/wMfAf//AP8A/wBTAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYA
+        AQEWAAP/AQAE/wQABP8EAAT/BAAB/QG/AsMEAAH9Ab8CwwQAAf0BvwLDBAAB8AEPAsMEAAH9Ab8C/wQA
+        Af0BvwL/BAAB8AEPAcABAwQAAf0BvwHAAQMEAAH9Ab8BwAEDBAAB/QG/Av8EAAT/BAAE/wQABP8EABz/
+        AfEBjwL/AfEBgwGEATgB9wHvAf4BHwHuAe8BdQHXAfcB7wH9Ad8B5gHvAXUB1wH3Ae8B/QHfAeoB7wGF
+        AdcB9wHvAf4BHwHsAe8B9QHXAfcB7wH/Ad8B7gGvAYwBOAH3Ae8B7gE7AfEBzwH9Af8B9wLvAfsC/wH9
+        Af8B9wLvAfsE/wHxAY8a/ws=
+</value>
+  </data>
 </root>
