Add ifs and enums to BinarySchema

--- a/TCPMon/SchemaTester.resx
+++ b/TCPMon/SchemaTester.resx
@@ -142,33 +142,49 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADo
-        BQAAAk1TRnQBSQFMAgEBBgEAARABAAEQAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/AC0AAx8B/wgAAx8B/yAAAx8B/wMfAf8DHwH/Ax8B/xAAAx8B/wMf
-        Af8DHwH/Ax8B/6AAAx8B/wgAAx8B/yAAAx8B/wMfAf8DHwH/Ax8B/xAAAx8B/wMfAf8DHwH/Ax8B/6AA
-        Ax8B/wgAAx8B/yAAAx8B/wMfAf8DHwH/Ax8B/xAAAx8B/wMfAf8DHwH/Ax8B/5gAAx8B/wMfAf8DHwH/
-        Ax8B/wMfAf8DHwH/Ax8B/wMfAf8YAAMfAf8DHwH/Ax8B/wMfAf8QAAMfAf8DHwH/Ax8B/wMfAf+gAAMf
-        Af8IAAMfAf/wAAMfAf8IAAMfAf/oAAMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/GAADHwH/
-        Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf+gAAMfAf8IAAMfAf8gAAMf
-        Af8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/6AAAx8B/wgAAx8B/yAA
-        Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/oAADHwH/CAADHwH/
-        /wD/AP8A/wD/AP8A/wBvAAMfAf8DHwH/Ax8B/wgAAx8B/wMfAf8DHwH/YAADHwH/Ax8B/wMfAf8IAAMf
-        Af8DHwH/Ax8B/wMfAf8DHwH/DAADHwH/Ax8B/wMfAf8DHwH/BAADHwH/Ax8B/wMfAf8DHwH/DAADHwH/
-        Ax8B/wMfAf8QAAMfAf8YAAMfAf8sAAMfAf8DHwH/Ax8B/wMfAf8gAAMfAf8MAAMfAf8MAAMfAf8QAAMf
-        Af8MAAMfAf8EAAMfAf8MAAMfAf8EAAMfAf8cAAMfAf8YAAMfAf8oAAMfAf8MAAMfAf8gAAMfAf8DHwH/
-        CAADHwH/DAADHwH/EAADHwH/DAADHwH/BAADHwH/DAADHwH/BAADHwH/HAADHwH/GAADHwH/KAADHwH/
-        DAADHwH/IAADHwH/BAADHwH/BAADHwH/DAADHwH/FAADHwH/Ax8B/wMfAf8DHwH/BAADHwH/DAADHwH/
-        BAADHwH/HAADHwH/GAADHwH/LAADHwH/Ax8B/wMfAf8DHwH/IAADHwH/CAADHwH/Ax8B/wwAAx8B/yAA
-        Ax8B/wQAAx8B/wwAAx8B/wQAAx8B/xwAAx8B/xgAAx8B/zgAAx8B/yAAAx8B/wwAAx8B/wQAAx8B/wQA
-        Ax8B/xQAAx8B/wMfAf8DHwH/CAADHwH/Ax8B/wMfAf8DHwH/DAADHwH/Ax8B/wMfAf8QAAMfAf8YAAMf
-        Af8cAAMfAf8MAAMfAf8DHwH/Ax8B/wwAAx8B/xgAAx8B/wMfAf8DHwH/DAADHwH/Ax8B/ygAAx8B/zQA
-        Ax8B/xgAAx8B/xwAAx8B/yQAAx8B/2AAAx8B/zQAAx8B/xgAAx8B/xwAAx8B/yQAAx8B/5gAAx8B/wMf
-        Af8DHwH/CAADHwH/Ax8B/wMfAf//AP8A/wBTAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYA
-        AQEWAAP/AQAE/wQABP8EAAT/BAAB/QG/AsMEAAH9Ab8CwwQAAf0BvwLDBAAB8AEPAsMEAAH9Ab8C/wQA
-        Af0BvwL/BAAB8AEPAcABAwQAAf0BvwHAAQMEAAH9Ab8BwAEDBAAB/QG/Av8EAAT/BAAE/wQABP8EABz/
-        AfEBjwL/AfEBgwGEATgB9wHvAf4BHwHuAe8BdQHXAfcB7wH9Ad8B5gHvAXUB1wH3Ae8B/QHfAeoB7wGF
-        AdcB9wHvAf4BHwHsAe8B9QHXAfcB7wH/Ad8B7gGvAYwBOAH3Ae8B7gE7AfEBzwH9Af8B9wLvAfsC/wH9
-        Af8B9wLvAfsE/wHxAY8a/ws=
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACk
+        CQAAAk1TRnQBSQFMAgEBBwEAARgBAAEYAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIK4AA6UB//wAAnIBZwH/AnUBWgH/+AAChAGBAf8B4gHOAboB/wNjAf9wAAMf
+        Af8IAAMfAf8gAAMfAf8DHwH/Ax8B/wMfAf8QAAMfAf8DHwH/Ax8B/wMfAf8gAAPfAf8CcgFnAf8B+QH2
+        AfEB/wHiAc0BuQH/AoABWQH/AoQBfwH/AokBhgH/A7sB/2AAAx8B/wgAAx8B/yAAAx8B/wMfAf8DHwH/
+        Ax8B/xAAAx8B/wMfAf8DHwH/Ax8B/xAAA8UB/wgAA8EB/wHPAa4BjgH/AesB3gHRAf8B/QH8AfoB/wH9
+        AfwB+gH/Af0B+wH4Af8B9AHrAeMB/wHxAecB3QH/AdgBvgGjAf8CawFhAf9cAAMfAf8IAAMfAf8gAAMf
+        Af8DHwH/Ax8B/wMfAf8QAAMfAf8DHwH/Ax8B/wMfAf8QAAOiAf8DnwH/BAADdgH/AfgB8QHsAf8B/QH7
+        AfgB/wH4AfAB5wH/AfcB7wHmAf8B9wHuAeQB/wH4AfAB6AH/AfgB8QHqAf8B/QH7AfkB/wHyAekB4AH/
+        AoUBgQH/UAADHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/xgAAx8B/wMfAf8DHwH/Ax8B/xAA
+        Ax8B/wMfAf8DHwH/Ax8B/xAAA7AB/wOcAf8DngH/AmsBaQH/AfoB9wHyAf8B+gHzAewB/wH4AfEB6QH/
+        AfgB8AHnAf8B9wHvAeYB/wH3Ae4B5AH/AfYB7AHiAf8B9wHvAecB/wH0AewB5QH/A3wB/1gAAx8B/wgA
+        Ax8B/1wAA+sB/wOoAf8DnAH/A5wB/wJjAVwB/wH6AfYB8QH/AfoB9AHuAf8B+QHyAeoB/wH4AfEB6QH/
+        AfgB8AHoAf8B9wHvAeYB/wH3Ae4B5AH/AfgB8QHpAf8B8wHqAeIB/wKGAYMB/1gAAx8B/wgAAx8B/1gA
+        A9YB/wOcAf8DnAH/A5wB/wOcAf8CYwFhAf8B+gH2AfIB/wH6AfUB7wH/AfoB9AHuAf8B+gHzAe0B/wH5
+        AfMB6wH/AfkB8gHrAf8B+AHxAekB/wH6AfUB7wH/AfMB6gHiAf8ChgGDAf9QAAMfAf8DHwH/Ax8B/wMf
+        Af8DHwH/Ax8B/wMfAf8DHwH/GAADHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/
+        Ax8B/wMfAf8IAAOnAf8DnAH/A5wB/wOcAf8DnAH/A2wB/wHkAdEBvgH/AfoB9gHyAf8B+gH2AfEB/wH6
+        AfYB8QH/AfoB9QHxAf8B+gH1AfEB/wH6AfUB8AH/AfYB8AHpAf8B3AHEAa0B/wOnAf9YAAMfAf8IAAMf
+        Af8gAAMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wgAA6IB/wOc
+        Af8DnAH/A5wB/wOcAf8DjwH/A3IB/wJjAWIB/wNjAf8CYwFiAf8CcAFeAf8CcgFoAf8CcgFoAf8CfAF1
+        Af8DwQH/XAADHwH/CAADHwH/IAADHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/Ax8B/wMfAf8DHwH/
+        Ax8B/wMfAf8IAAOiAf8DnAH/A5wB/wOcAf8DnAH/A5wB/wOcAf8DnAH/A5wB/wOcAf8DrgH/bAADHwH/
+        CAADHwH/WAADogH/A5wB/wOcAf8DnAH/A5wB/wOcAf8DnAH/A5wB/wOcAf8DnAH/A64B/9QAA7sB/wOc
+        Af8DnAH/A5wB/wOcAf8DnAH/A5wB/wOcAf8DnAH/A5wB/wPGAf/YAAO8Af8DpAH/A6QB/wOkAf8DpAH/
+        A6QB/wOkAf8DqAH/A9cB//8A/wD/AP8A7AADHwH/Ax8B/wMfAf8IAAMfAf8DHwH/Ax8B/2AAAx8B/wMf
+        Af8DHwH/CAADHwH/Ax8B/wMfAf8DHwH/Ax8B/wwAAx8B/wMfAf8DHwH/Ax8B/wQAAx8B/wMfAf8DHwH/
+        Ax8B/wwAAx8B/wMfAf8DHwH/EAADHwH/GAADHwH/LAADHwH/Ax8B/wMfAf8DHwH/IAADHwH/DAADHwH/
+        DAADHwH/EAADHwH/DAADHwH/BAADHwH/DAADHwH/BAADHwH/HAADHwH/GAADHwH/KAADHwH/DAADHwH/
+        IAADHwH/Ax8B/wgAAx8B/wwAAx8B/xAAAx8B/wwAAx8B/wQAAx8B/wwAAx8B/wQAAx8B/xwAAx8B/xgA
+        Ax8B/ygAAx8B/wwAAx8B/yAAAx8B/wQAAx8B/wQAAx8B/wwAAx8B/xQAAx8B/wMfAf8DHwH/Ax8B/wQA
+        Ax8B/wwAAx8B/wQAAx8B/xwAAx8B/xgAAx8B/ywAAx8B/wMfAf8DHwH/Ax8B/yAAAx8B/wgAAx8B/wMf
+        Af8MAAMfAf8gAAMfAf8EAAMfAf8MAAMfAf8EAAMfAf8cAAMfAf8YAAMfAf84AAMfAf8gAAMfAf8MAAMf
+        Af8EAAMfAf8EAAMfAf8UAAMfAf8DHwH/Ax8B/wgAAx8B/wMfAf8DHwH/Ax8B/wwAAx8B/wMfAf8DHwH/
+        EAADHwH/GAADHwH/HAADHwH/DAADHwH/Ax8B/wMfAf8MAAMfAf8YAAMfAf8DHwH/Ax8B/wwAAx8B/wMf
+        Af8oAAMfAf80AAMfAf8YAAMfAf8cAAMfAf8kAAMfAf9gAAMfAf80AAMfAf8YAAMfAf8cAAMfAf8kAAMf
+        Af+YAAMfAf8DHwH/Ax8B/wgAAx8B/wMfAf8DHwH//wD/AP8AUwABQgFNAT4HAAE+AwABKAMAAUADAAEg
+        AwABAQEAAQEGAAEBFgAD/wEABP8B/gH/AgAE/wH+AX8CAAT/Af4BPwIAAf0BvwLDAfwBAwIAAf0BvwLD
+        AdgBAQIAAf0BvwLDAcgDAAHwAQ8CwwHAAwAB/QG/Av8BgAMAAf0BvwL/BAAB8AEPAcABAwQAAf0BvwHA
+        AQMBAAEBAgAB/QG/AcABAwEAAR8CAAH9Ab8C/wEAAR8CAAT/AQABHwIABP8BgAE/AgAG/wIAHP8B8QGP
+        Av8B8QGDAYQBOAH3Ae8B/gEfAe4B7wF1AdcB9wHvAf0B3wHmAe8BdQHXAfcB7wH9Ad8B6gHvAYUB1wH3
+        Ae8B/gEfAewB7wH1AdcB9wHvAf8B3wHuAa8BjAE4AfcB7wHuATsB8QHPAf0B/wH3Au8B+wL/Af0B/wH3
+        Au8B+wT/AfEBjxr/Cw==
 </value>
   </data>
 </root>
